--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -4,11 +4,11 @@
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted }}</small>
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+                <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d')  }}</small>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+                <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+              <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
     {% endfor %}
@@ -16,11 +16,10 @@
 {% block feed %}
     {% for travel in travels.items %}
         <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + travel.user_id.image_file) }}">
+            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + travel.creator.image_file) }}">
           <div class="media-body">
             <div class="article-metadata">
               <small class="text-muted">{{ travel.date_posted.strftime('%Y-%m-%d') }}</small>
-                <small class="text-muted">{{travel.user_id }}</small>
             </div>
             <h2><a class="article-title" href="{{ url_for('travels.travel', travel_id=travel.id) }}">{{ travel.destination }}</a></h2>
             <p class="article-content">{{ travel.description }}</p>
