--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -35,6 +35,7 @@
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
                     <a class="nav-item nav-link" href="{{ url_for('travels.travel') }}">Travel</a>
+                     <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">Post</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
