--- a/blog/templates/create_post.html
+++ b/blog/templates/create_post.html
@@ -19,16 +19,16 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.trip.label(class="form-control-label") }}
-                {% if form.trip.errors %}
-                    {{ form.trip(class="form-control form-control-lg is-invalid") }}
+                {{ form.content.label(class="form-control-label") }}
+                {% if form.content.errors %}
+                    {{ form.content(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.trip.errors %}
+                        {% for error in form.content.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.trip(class="form-control form-control-lg") }}
+                    {{ form.content(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
