--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -36,4 +36,40 @@
       </div>
     </div>
   </div>
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <div class="form-group">
+                {{ form.content.label(class="form-control-label") }}
+                {% if form.content.errors %}
+                    {{ form.content(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.content.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.content(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
+</div>
+{% for comment in comments %}
+        <article class="media content-section">
+            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + comment.commenter.image_file) }}">
+          <div class="media-body">
+            <div class="article-metadata">
+              <small class="text-muted">{{ comment.date_commented.strftime('%Y-%m-%d') }}</small>
+            </div>
+            <p class="article-content">{{ comment.content }}</p>
+          </div>
+        </article>
+{% endfor %}
+
 {% endblock content %}
