--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -19,6 +19,7 @@
             <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + travel.creator.image_file) }}">
           <div class="media-body">
             <div class="article-metadata">
+                <a class="mr-2" href="{{ url_for('users.user_posts', username=travel.creator.username) }}">{{ travel.creator.username }}</a>
               <small class="text-muted">{{ travel.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
             <h2><a class="article-title" href="{{ url_for('travels.travel', travel_id=travel.id) }}">{{ travel.destination }}</a></h2>
