--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -34,13 +34,14 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
-                    <a class="nav-item nav-link" href="{{ url_for('travels.travel') }}">Travel</a>
-                     <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">Post</a>
+                    <a class="nav-item nav-link" href="{{ url_for('travels.create_travel') }}">New Travel</a>
+                     <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
                     <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Account</a>
+                    <a class="nav-item nav-link" href="{{ url_for('users.bookings') }}">Active Bookings</a>
                     <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
                     {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
