--- a/blog/templates/travel.html
+++ b/blog/templates/travel.html
@@ -12,11 +12,11 @@
             <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
           </div>
         {% endif %}
-          {% if booked==false and travel.available != 0 %}
+        {% if booked==false and travel.available > 0 %}
           <div>
           <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('travels.join_travel', travel_id=travel.id) }}">Join this trip!</a>
           </div>
-          {% endif %}
+        {% endif %}
       </div>
       <h2 class="article-title">{{ travel.destination }}</h2>
       <p class="article-content">{{ travel.description }}</p>
