--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -14,6 +14,7 @@
     {% endfor %}
 {% endblock content %}
 {% block feed %}
+<h2>Travels</h2>
     {% for travel in travels.items %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + travel.creator.image_file) }}">
