--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -15,6 +15,7 @@
       </div>
       <h2 class="article-title">{{ post.title }}</h2>
       <p class="article-content">{{ post.content }}</p>
+      <img class="rounded-circle account-img" src="{{ image_file }}">
     </div>
   </article>
   <!-- Modal -->
