--- a/blog/templates/create_travel.html
+++ b/blog/templates/create_travel.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="content-section">
-    <form method="post" action="">
+    <form method="post" action="" enctype="multipart/form-data">
         {% if form.errors %}
         {{form.errors}}
         {%endif%}
@@ -78,7 +78,15 @@
                 {{ form.description(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-
+            <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
+                        {% endfor %}
+                    {% endif %}
+             </div>
 
         </fieldset>
         <div class="form-group">
