--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -9,6 +9,9 @@
             </div>
                 <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
               <p class="article-content">{{ post.content }}</p>
+              {% if post.image_file  %}
+              <img class="img-fluid" src="{{ url_for('static', filename='post_pics/' + post.image_file)}}">
+              {% endif %}
           </div>
         </article>
     {% endfor %}
@@ -25,6 +28,9 @@
             </div>
             <h2><a class="article-title" href="{{ url_for('travels.travel', travel_id=travel.id) }}">{{ travel.destination }}</a></h2>
             <p class="article-content">{{ travel.description }}</p>
+              {% if travel.image_file  %}
+              <img class="img-fluid" src="{{ url_for('static', filename='travel_pics/' + travel.image_file)}}">
+              {% endif %}
           </div>
         </article>
     {% endfor %}
