--- a/blog/templates/travel.html
+++ b/blog/templates/travel.html
@@ -18,7 +18,11 @@
         {% endif %}
       </div>
       <h2 class="article-title">{{ travel.destination }}</h2>
+        <h3 class="article-title">Available: {{ travel.available }}</h3>
       <p class="article-content">{{ travel.description }}</p>
+        {% if travel.image_file  %}
+              <img class="img-fluid" src="{{ url_for('static', filename='travel_pics/' + travel.image_file)}}">
+        {% endif %}
     </div>
   </article>
   <!-- Modal -->
@@ -99,6 +103,9 @@
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
             <p class="article-content">{{ post.content }}</p>
+              {% if post.image_file  %}
+              <img class="img-fluid" src="{{ url_for('static', filename='post_pics/' + post.image_file)}}">
+              {% endif %}
           </div>
         </article>
 {% endfor %}
