--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -40,8 +40,9 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Account</a>
+                    <a class="nav-item nav-link" href="{{ url_for('users.user_posts', username=current_user.username) }}">Profile</a>
                     <a class="nav-item nav-link" href="{{ url_for('users.bookings') }}">Active Bookings</a>
+                    <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Update Account</a>
                     <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
                     {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
