--- a/blog/templates/travel.html
+++ b/blog/templates/travel.html
@@ -23,6 +23,7 @@
         {% endif %}
       </div>
       <h2 class="article-title">{{ travel.destination }}</h2>
+        <h3 class="article-title">Budget: {{ travel.budget }}</h3>
         <h3 class="article-title">Available: {{ travel.available }}</h3>
       <p class="article-content">{{ travel.description }}</p>
         {% if travel.image_file  %}
