--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -49,7 +49,7 @@
    </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-             Need an account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up Now</a>
+             Per inserire una nuova gara:<a class="ml-2" href="{{ url_for('races.register') }}">Registrazione</a>
         </small>
 
 
