--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a.article-title:hover {
-  color: #8a1c1e;
+  color: #003063;
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@ a.article-title:hover {
 .article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #FF3333
+  border-bottom: 1px solid #003063
 }
 
 .article-metadata a:hover {
