--- a/blog/templates/create_group.html
+++ b/blog/templates/create_group.html
@@ -68,6 +68,9 @@
         <div class="form-group">
             {{ form.submitall(class="btn btn-outline-info") }}
         </div>
+         <div class="form-group">
+            {{ form.submitallv(class="btn btn-outline-info") }}
+        </div>
     </form>
 </div>
 {% endblock content %}
