--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -43,7 +43,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Attività</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="{{ url_for('activities.panoramica') }}">Panoramica</a>
+                          <a class="dropdown-item" href="{{ url_for('activities.overview') }}">Panoramica</a>
                           <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">Inserimento</h6>
                             <a class="dropdown-item" href="{{ url_for('activities.create_stage') }}">Impiego</a>
@@ -55,7 +55,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Gruppi</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="{{ url_for('activities.panoramica') }}">Panoramica</a>
+                          <a class="dropdown-item" href="{{ url_for('groups.overview') }}">Panoramica</a>
                             <a class="dropdown-item" href="{{ url_for('groups.new_group') }}">Inserimento</a>
                         </div>
                     </li>
